--- a/css/main.css
+++ b/css/main.css
@@ -98,8 +98,8 @@ body {
 	position: fixed;
 	width: 100%;
 	/* background-color: #35405f; */
-	background-color: rgba(144, 146, 153, 0.94);
-	/* background-color: rgba(32, 178, 170, 0.86); */
+	/* background-color: rgba(144, 146, 153, 0.94);*/
+	background-color: rgba(32, 178, 170, 0.86);
 	padding: 0 30px;
 	z-index: 100;
 }
@@ -248,7 +248,7 @@ body {
 	word-spacing: 5px;
 	letter-spacing: 1px;
 	box-shadow: 0 3px 1px 0 rgba(20, 20, 26, 0.55);
-	border-radius: 0;
+	border-radius: 20px;
 	font-size: 18px;
 	background-color: rgba(247, 255, 248, 1);
 	padding: 16px 48px;
@@ -322,7 +322,7 @@ body {
 	font-weight: 300;
 	word-spacing: 5px;
 	letter-spacing: 1px;
-	border-radius: 0;
+	border-radius: 20px;
 	font-size: 18px;
 	padding: 16px 48px;
 }
@@ -576,6 +576,7 @@ textarea {
 	width: 100%;
 	background: transparent;
 	border: 1px solid #fff;
+	border-radius: 20px;
 	padding: 12px 15px;
 	margin-bottom: 30px;
 }
@@ -583,6 +584,7 @@ textarea {
 input[type="submit"] {
 	background: transparent;
 	border: 1px solid #fff;
+	border-radius: 20px;
 	width: 100%;
 	padding: 10px;
 	transition: 0.5s background linear;
